--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "@rraty/antd-scss-theme-plugin",
+	"name": "@yogesum/antd-scss-theme-plugin",
 	"description": "A Webpack plugin for customizing Ant Design with SCSS.",
 	"version": "1.3.12",
 	"main": "build/index.js",
@@ -11,7 +11,7 @@
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/rraty/antd-scss-theme-plugin.git"
+		"url": "https://github.com/yogesum/antd-scss-theme-plugin.git"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -28,19 +28,20 @@
 		"sass-loader",
 		"styles"
 	],
-	"author": "Rasmus <rraty-dev@gmail.com>",
+	"author": "Yogesh Choudhary <yogesum@gmail.com>",
 	"license": "BSD-2-Clause",
 	"bugs": {
-		"url": "https://github.com/rraty/antd-scss-theme-plugin/issues"
+		"url": "https://github.com/yogesum/antd-scss-theme-plugin/issues"
 	},
-	"homepage": "https://github.com/rraty/antd-scss-theme-plugin",
+	"homepage": "https://github.com/yogesum/antd-scss-theme-plugin",
 	"files": [
 		"build/dist"
 	],
 	"dependencies": {
 		"less": "^4.1.0",
 		"less-vars-to-js": "^1.3.0",
-		"loader-utils": "^2.0.0"
+		"loader-utils": "^2.0.0",
+		"sass-export": "^2.1.0"
 	},
 	"peerDependencies": {
 		"antd": ">= ^4.1.0",
