--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-	"name": "@yogesum/antd-scss-theme-plugin",
+	"name": "@amitrahav/antd-scss-theme-plugin",
 	"description": "A Webpack plugin for customizing Ant Design with SCSS.",
-	"version": "1.3.12",
+	"version": "1.4.0",
 	"main": "build/index.js",
 	"scripts": {
 		"build": "cross-env NODE_ENV=production babel src --out-dir build",
-		"test": "cross-env NODE_ENV=testing jest",
+		"test": "cross-env NODE_ENV=testing jest --verbose --detectOpenHandles",
 		"test:watch": "cross-env NODE_ENV=testing jest --watch",
 		"watch": "cross-env NODE_ENV=development webpack --config webpack.config.js --watch"
 	},
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/yogesum/antd-scss-theme-plugin.git"
+		"url": "https://github.com/amitrahav/antd-scss-theme-plugin"
 	},
 	"publishConfig": {
 		"access": "public"
@@ -31,9 +31,9 @@
 	"author": "Yogesh Choudhary <yogesum@gmail.com>",
 	"license": "BSD-2-Clause",
 	"bugs": {
-		"url": "https://github.com/yogesum/antd-scss-theme-plugin/issues"
+		"url": "https://github.com/amitrahav/antd-scss-theme-plugin/issues"
 	},
-	"homepage": "https://github.com/yogesum/antd-scss-theme-plugin",
+	"homepage": "https://github.com/amitrahav/antd-scss-theme-plugin",
 	"files": [
 		"build/dist"
 	],
@@ -51,10 +51,10 @@
 	"devDependencies": {
 		"@babel/cli": "^7.12.10",
 		"@babel/core": "^7.12.10",
+		"@babel/eslint-parser": "^7.17.0",
 		"@babel/plugin-proposal-class-properties": "^7.12.1",
 		"@babel/preset-env": "^7.12.11",
-		"antd": "^4.10.3",
-		"babel-eslint": "^10.1.0",
+		"antd": "^4.20.5",
 		"babel-loader": "^8.2.2",
 		"babel-plugin-add-module-exports": "^1.0.4",
 		"cross-env": "^7.0.3",
@@ -65,15 +65,16 @@
 		"eslint-import-resolver-webpack": "^0.13.0",
 		"eslint-plugin-import": "^2.22.1",
 		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-webpack-plugin": "^2.4.3",
+		"eslint-webpack-plugin": "^2.6.0",
 		"jest": "^26.6.3",
-		"less-loader": "^7.3.0",
-		"node-sass": "^4.14.1",
-		"prettier": "^2.2.1",
+		"less-loader": "^10.2.0",
+		"prettier": "^2.3.2",
 		"raw-loader": "^4.0.2",
 		"rimraf": "^3.0.2",
-		"sass-loader": "^10.1.1",
-		"webpack": "^5.17.0",
-		"webpack-node-externals": "^2.5.2"
+		"sass": "^1.51.0",
+		"sass-loader": "^12.6.0",
+		"webpack": "^5.72.1",
+		"webpack-cli": "^4.9.2",
+		"webpack-node-externals": "^3.0.0"
 	}
 }
